ポートフォリオ_iwasawa15

--- a/about_me.html
+++ b/about_me.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- あしらいにアニメーションをつけるために以下を読み込む -->
-    <script src="
-https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
-"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js"></script>
+<!-- tilt.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.1/vanilla-tilt.min.js"></script>
   </head>
   <body>
       <!-- カーソルの見た目を変更 -->
@@ -226,7 +226,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
          <!-- ステップ3-->
           <div class="sp_flow_flex">
                 <div class="sp_line_flex">
-<p class="sp_step_title">Step.03</p>
+  <p class="sp_step_title">Step.03</p>
    <div class="sp_line"></div></div>
 
          <ol class="step_wrapper">
@@ -272,7 +272,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
                 >貴社名</label
               >
               <input
-                name="entry.193574675"
+                name="entry.366340186"
                 type="text"
                 class="c-form_input"
                 id="field_company_name"
@@ -283,7 +283,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
             <div class="c-form_item">
               <label class="c-form_label" for="field_name">お名前</label>
               <input
-                name="entry.479767945"
+                name="entry.1067791974"
                 type="text"
                 class="c-form_input"
                 id="field_name"
@@ -297,8 +297,8 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
                 >メールアドレス</label
               >
               <input
-                name="entry.575046759"
-                type="text"
+                name="entry.1795311363"
+                type="email"
                 class="c-form_input"
                 id="field_mail"
                 placeholder=" info@sample.co.jp"
@@ -309,8 +309,8 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
             <div class="c-form_item">
               <label class="c-form_label" for="field_phone_num">電話番号</label>
               <input
-                name="entry.1542452913"
-                type="text"
+                name="entry.307859011"
+                type="tel"
                 class="c-form_input"
                 id="field_phone_num"
                 placeholder=" 090-1234-5678"
@@ -322,7 +322,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
                 >お問い合わせ内容</label
               >
               <textarea
-                name="entry.1725306659"
+                name="entry.648122247"
                 class="c-form_input"
                 id="field_message"
                 required="required"
@@ -330,7 +330,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
             </div>
 
             <!-- 送信ボタン -->
-            <div class="c-form_submit">
+            <div class="c-form_submit tilt_btn03">
               <button type="submit">
                 <img src="./images/1x/send_mail_btn.svg" alt="ボタンの画像" />
                 <p><span class="c-form_span">内容を送信する</span></p>
@@ -351,28 +351,28 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
           alt="∞マークの装飾"
         /> -->
         <svg 
-        id="layer10"
-        class="roop_design10"
+        id="layer09"
+        class="roop_design09"
         data-name="レイヤー 2" 
         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1301.44 1180">
-  <defs>
+        <defs>
     <style>
-      .roop10-1, .roop10-2 {
+      .roop09-1, .roop09-2 {
         fill: none;
       }
 
-      .roop10-2 {
+      .roop09-2 {
         stroke: url(#_名称未設定グラデーション_126);
         stroke-miterlimit: 10;
         stroke-width: 1.07px;
       }
 
-      .roop10-3 {
-        clip-path: url(#clippath10);
+      .roop09-3 {
+        clip-path: url(#clippath09);
       }
     </style>
-    <clipPath id="clippath10">
-      <rect class="roop10s-1" width="1301.44" height="1180"/>
+    <clipPath id="clippath09">
+      <rect class="roop09-1" width="1301.44" height="1180"/>
     </clipPath>
     <linearGradient id="_名称未設定グラデーション_126" data-name="名称未設定グラデーション 126" x1="955.9" y1="1983.27" x2="2308.94" y2="1983.27" gradientTransform="translate(-1252.29 -886.64) rotate(-12.48)" gradientUnits="userSpaceOnUse">
       <stop offset="0" stop-color="#181e4d"/>
@@ -381,8 +381,8 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
     </linearGradient>
   </defs>
   <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
-    <g class="roop10-3">
-      <path class="roop10-2" d="M1333.48,192.07c-118.58,134.2-199.81,296.46-298.72,445.75-82.43,124.42-178.3,241.06-293.57,335.87-115.27,94.81-250.73,167.34-396.85,197.74-42.3,8.8-88.71,16.51-127.67-7.26-26.85-16.38-46.28-44.45-52.15-75.35-7.94-41.8,8.72-85.52,36.11-118.09,80.07-95.21,230-124.93,344.55-155.06,134.11-35.26,267.61-67.55,398.07-114.78,129.9-47.03,257.02-101.74,380.48-163.74,31.17-15.66,62.38-31.5,93.14-47.9"/>
+    <g class="roop09-3">
+      <path class="roop09-2" d="M1333.48,192.07c-118.58,134.2-199.81,296.46-298.72,445.75-82.43,124.42-178.3,241.06-293.57,335.87-115.27,94.81-250.73,167.34-396.85,197.74-42.3,8.8-88.71,16.51-127.67-7.26-26.85-16.38-46.28-44.45-52.15-75.35-7.94-41.8,8.72-85.52,36.11-118.09,80.07-95.21,230-124.93,344.55-155.06,134.11-35.26,267.61-67.55,398.07-114.78,129.9-47.03,257.02-101.74,380.48-163.74,31.17-15.66,62.38-31.5,93.14-47.9"/>
     </g>
   </g>
 </svg>
@@ -416,7 +416,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
       }
     </style>
     <clipPath id="clippath10">
-      <rect class="roop10s-1" width="1301.44" height="1180"/>
+      <rect class="roop10-1" width="1301.44" height="1180"/>
     </clipPath>
     <linearGradient id="_名称未設定グラデーション_126" data-name="名称未設定グラデーション 126" x1="955.9" y1="1983.27" x2="2308.94" y2="1983.27" gradientTransform="translate(-1252.29 -886.64) rotate(-12.48)" gradientUnits="userSpaceOnUse">
       <stop offset="0" stop-color="#181e4d"/>
@@ -516,6 +516,11 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         },
       });
 
+       VanillaTilt.init(document.querySelector(".tilt_btn03"), {
+        max: 25,
+        speed: 700,
+      });
+
       //バーガーメニュー
       $(function () {
         $(".works_banner_sp_btn").on("click", function () {
@@ -560,6 +565,28 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         }
 
         playForward10();
+
+        //あしらい09
+        const vivus09 = new Vivus("layer09", {
+          duration: 350,
+          start: "autostart",
+          type: "scenario",
+          pathTimingFunction: Vivus.EASE_OUT,
+        });
+
+        function playForward09() {
+          vivus09.play(1, function () {
+            setTimeout(playBackward09, 350);
+          });
+        }
+
+        function playBackward09() {
+          vivus09.play(-1, function () {
+            setTimeout(playForward09, 350);
+          });
+        }
+
+        playForward09();
       });
     </script>
   </body>
