--- a/banner_01.html
+++ b/banner_01.html
@@ -118,97 +118,94 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
     </main>
 
     <!-- <フッター> -->
-    <a href="works_all.html"
-      ><footer id="c-form" class="works_banner_footer">
-        <!-- あしらい6 -->
-        <div class="roop_wrapper06">
-          <!-- <img
+    <footer id="c-form" class="works_banner_footer">
+      <!-- あしらい6 -->
+      <div class="roop_wrapper06">
+        <!-- <img
           class="roop_design06"
           src="./images/1x/roop_design06.svg"
           alt="∞マークの装飾"
         /> -->
-          <svg
-            id="layer06"
-            class="roop_design06"
-            data-name="レイヤー 2"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            viewBox="0 0 1340.42 1032.19"
-          >
-            <defs>
-              <style>
-                .roop06-1,
-                .roop06-2 {
-                  fill: none;
-                }
+        <svg
+          id="layer06"
+          class="roop_design06"
+          data-name="レイヤー 2"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 1340.42 1032.19"
+        >
+          <defs>
+            <style>
+              .roop06-1,
+              .roop06-2 {
+                fill: none;
+              }
 
-                .roop06-2 {
-                  stroke: url(#_名称未設定グラデーション_12);
-                  stroke-miterlimit: 10;
-                  stroke-width: 1.1px;
-                }
+              .roop06-2 {
+                stroke: url(#_名称未設定グラデーション_12);
+                stroke-miterlimit: 10;
+                stroke-width: 1.1px;
+              }
 
-                .roop06-3 {
-                  clip-path: url(#clippath06);
-                }
-              </style>
-              <clipPath id="clippath06">
-                <rect class="roop06-1" width="1340.42" height="1032.19" />
-              </clipPath>
-              <linearGradient
-                id="_名称未設定グラデーション_12"
-                data-name="名称未設定グラデーション 12"
-                x1="-3262.51"
-                y1="219.56"
-                x2="-1663.21"
-                y2="219.56"
-                gradientTransform="translate(-1727.92 -379.63) rotate(-164.8) scale(1 -1)"
-                gradientUnits="userSpaceOnUse"
-              >
-                <stop offset="0" stop-color="#8aecff" />
-                <stop offset=".19" stop-color="#88e8fc" />
-                <stop offset=".33" stop-color="#83dff4" />
-                <stop offset=".46" stop-color="#7acfe6" />
-                <stop offset=".58" stop-color="#6db8d2" />
-                <stop offset=".69" stop-color="#5d9ab8" />
-                <stop offset=".8" stop-color="#497699" />
-                <stop offset=".9" stop-color="#314c75" />
-                <stop offset="1" stop-color="#181e4d" />
-              </linearGradient>
-            </defs>
-            <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
-              <g class="roop06-3">
-                <path
-                  class="roop06-2"
-                  d="M-67-22C72,107.78,165.94,259.67,281.19,401.37c96.06,118.09,208.29,230.31,344.07,324.55,135.78,94.24,296.07,170.17,469.85,209.23,50.31,11.31,105.53,21.97,152.46,3.84,32.34-12.49,56.03-36.06,63.61-63.25,10.25-36.79-8.83-77.29-40.9-108.67-93.78-91.75-272.11-130.51-408.23-166.77-159.35-42.44-318.04-82.17-472.82-135.04-154.12-52.64-304.78-111.93-450.94-177.45-36.9-16.54-73.84-33.26-110.24-50.44"
-                />
-              </g>
+              .roop06-3 {
+                clip-path: url(#clippath06);
+              }
+            </style>
+            <clipPath id="clippath06">
+              <rect class="roop06-1" width="1340.42" height="1032.19" />
+            </clipPath>
+            <linearGradient
+              id="_名称未設定グラデーション_12"
+              data-name="名称未設定グラデーション 12"
+              x1="-3262.51"
+              y1="219.56"
+              x2="-1663.21"
+              y2="219.56"
+              gradientTransform="translate(-1727.92 -379.63) rotate(-164.8) scale(1 -1)"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop offset="0" stop-color="#8aecff" />
+              <stop offset=".19" stop-color="#88e8fc" />
+              <stop offset=".33" stop-color="#83dff4" />
+              <stop offset=".46" stop-color="#7acfe6" />
+              <stop offset=".58" stop-color="#6db8d2" />
+              <stop offset=".69" stop-color="#5d9ab8" />
+              <stop offset=".8" stop-color="#497699" />
+              <stop offset=".9" stop-color="#314c75" />
+              <stop offset="1" stop-color="#181e4d" />
+            </linearGradient>
+          </defs>
+          <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
+            <g class="roop06-3">
+              <path
+                class="roop06-2"
+                d="M-67-22C72,107.78,165.94,259.67,281.19,401.37c96.06,118.09,208.29,230.31,344.07,324.55,135.78,94.24,296.07,170.17,469.85,209.23,50.31,11.31,105.53,21.97,152.46,3.84,32.34-12.49,56.03-36.06,63.61-63.25,10.25-36.79-8.83-77.29-40.9-108.67-93.78-91.75-272.11-130.51-408.23-166.77-159.35-42.44-318.04-82.17-472.82-135.04-154.12-52.64-304.78-111.93-450.94-177.45-36.9-16.54-73.84-33.26-110.24-50.44"
+              />
             </g>
-          </svg>
-        </div>
+          </g>
+        </svg>
+      </div>
 
+      <a href="works_all.html">
         <div class="scroll_circle_wrapper">
           <!-- <img
           class="scrol_circle"
           src="./images/1x/scroll_circle.svg"
           alt="半円のデザイン"
         /> -->
+
           <svg
             id="half-circle"
             class="scroll_circle"
             data-name="レイヤー 2"
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
-            viewBox="0 0 1336 462.15"
+            viewBox="0 -200 1336 662.15"
           >
             <defs>
               <style>
                 .cls-1 {
                   fill: none;
-                }
-
-                .cls-2 {
-                  clip-path: url(#clippath);
                 }
 
                 .cls-3 {
@@ -235,6 +232,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
                 <stop offset="1" stop-color="#181e4d" />
               </linearGradient>
             </defs>
+
             <g id="circle" data-name="編集_ワイヤーフレーム">
               <g class="cls-2">
                 <path
@@ -245,8 +243,9 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
               </g>
             </g>
           </svg>
-        </div></footer
-    ></a>
+        </div>
+      </a>
+    </footer>
 
     <!-- 共通：jquery -->
     <script>
@@ -388,9 +387,9 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
 
         let overscroll = 0;
         // 初期状態の半円の高さ
-        const baseHeight = 250;
+        const baseHeight = 400;
         // 半円の伸び幅
-        const maxExtra = 600;
+        const maxExtra = 500;
         let atBottom = false;
 
         // パスを作る
