--- a/website_01.html
+++ b/website_01.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- あしらいにアニメーションをつけるために以下を読み込む -->
-    <script src="
-https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
-"></script>
- <!-- 下スクロールのためのgsap cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js"></script>
+    <!-- 下スクロールのためのgsap cdn -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
   </head>
@@ -284,64 +282,60 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         </svg>
 
         <div class="scroll_circle_wrapper">
-          <img
+          <!-- <img
           class="scrol_circle"
           src="./images/1x/scroll_circle.svg"
           alt="半円のデザイン"
-        />
-          <!-- <svg
-            id="half-circle"
-            class="scroll_circle"
-            data-name="レイヤー 2"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            viewBox="0 0 1336 462.15"
-          >
-            <defs>
-              <style>
-                .cls-1 {
-                  fill: none;
-                }
+        /> -->
+        <svg
+          id="half-circle"
+          class="scroll_circle"
+          data-name="レイヤー 2"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 -200 1336 662.15"
+        >
+          <defs>
+            <style>
+              .cls-1 {
+                fill: none;
+              }
 
-                .cls-2 {
-                  clip-path: url(#clippath);
-                }
-
-                .cls-3 {
-                  fill: url(#_名称未設定グラデーション_45);
-                }
-              </style>
-              <clipPath id="clippath">
-                <rect class="cls-1" width="1336" height="462.15" />
-              </clipPath>
-              <linearGradient
-                id="_名称未設定グラデーション_45"
-                data-name="名称未設定グラデーション 45"
-                x1="668.33"
-                y1="462.15"
-                x2="668.33"
-                y2="109.55"
-                gradientUnits="userSpaceOnUse"
-              >
-                <stop offset="0" stop-color="#8aecff" />
-                <stop offset="0" stop-color="#75c8e0" />
-                <stop offset="0" stop-color="#5186a7" />
-                <stop offset=".42" stop-color="#35547b" />
-                <stop offset=".8" stop-color="#202c59" />
-                <stop offset="1" stop-color="#181e4d" />
-              </linearGradient>
-            </defs>
-            <g id="circle" data-name="編集_ワイヤーフレーム">
-              <g class="cls-2">
-                <path
-                  id="halfPath"
-                  class="cls-3"
-                  d="M1372.01,462.15c-118.78-207.6-389.15-352.6-703.67-352.6S83.44,254.55-35.34,462.15h1407.35Z"
-                />
-              </g>
+              .cls-3 {
+                fill: url(#_名称未設定グラデーション_45);
+              }
+            </style>
+            <clipPath id="clippath">
+              <rect class="cls-1" width="1336" height="462.15" />
+            </clipPath>
+            <linearGradient
+              id="_名称未設定グラデーション_45"
+              data-name="名称未設定グラデーション 45"
+              x1="668.33"
+              y1="462.15"
+              x2="668.33"
+              y2="109.55"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop offset="0" stop-color="#8aecff" />
+              <stop offset="0" stop-color="#75c8e0" />
+              <stop offset="0" stop-color="#5186a7" />
+              <stop offset=".42" stop-color="#35547b" />
+              <stop offset=".8" stop-color="#202c59" />
+              <stop offset="1" stop-color="#181e4d" />
+            </linearGradient>
+          </defs>
+          <g id="circle" data-name="編集_ワイヤーフレーム">
+            <g class="cls-2">
+              <path
+                id="halfPath"
+                class="cls-3"
+                d="M1372.01,462.15c-118.78-207.6-389.15-352.6-703.67-352.6S83.44,254.55-35.34,462.15h1407.35Z"
+              />
             </g>
-          </svg> -->
-        </div>
+          </g>
+        </svg>
+      </div>
     </footer>
 
     <!-- 共通：jquery -->
@@ -502,9 +496,9 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
 
         let overscroll = 0;
         // 初期状態の半円の高さ
-        const baseHeight = 250;
+        const baseHeight = 400;
         // 半円の伸び幅
-        const maxExtra = 600;
+        const maxExtra = 500;
         let atBottom = false;
 
         // パスを作る
