--- a/works_all.html
+++ b/works_all.html
@@ -347,78 +347,98 @@
 
     <!-- 共通：jquery -->
     <script>
+      // まず画面幅をチェック
+      if (window.matchMedia("(min-width: 768px)").matches) {
+        // PC幅のときだけイベント登録
+        document.querySelectorAll(".card").forEach((card) => {
+          card.addEventListener("mousemove", (e) => {
+            const rect = card.getBoundingClientRect();
+            const x = e.clientX - rect.left - rect.width / 2;
+            const y = e.clientY - rect.top - rect.height / 2;
+
+            const rotateX = (y / rect.height) * -40;
+            const rotateY = (x / rect.width) * 40;
+
+            gsap.to(card, {
+              rotationX: rotateX,
+              rotationY: rotateY,
+              scale: 1.2,
+              duration: 0.25,
+              ease: "power2.out",
+            });
+
+            gsap.to(card.querySelector(".flex_item_img"), {
+              opacity: 0.9,
+              filter: "blur(3px)",
+              duration: 0.25,
+              ease: "power2.out",
+            });
+          });
+
+          card.addEventListener("mouseleave", () => {
+            gsap.to(card, {
+              rotationX: 0,
+              rotationY: 0,
+              scale: 1,
+              duration: 0.4,
+              ease: "power2.out",
+            });
+
+            gsap.to(card.querySelector(".flex_item_img"), {
+              scale: 1,
+              opacity: 1,
+              filter: "grayscale(100%) blur(0px)",
+              duration: 0.4,
+              ease: "power2.out",
+            });
+          });
+        });
+      }
+
       //gsap　画像アニメーション　koko
-      document.querySelectorAll(".card").forEach((card) => {
-        card.addEventListener("mousemove", (e) => {
-          const rect = card.getBoundingClientRect();
-          const x = e.clientX - rect.left - rect.width / 2;
-          const y = e.clientY - rect.top - rect.height / 2;
+      // document.querySelectorAll(".card").forEach((card) => {
+      //   card.addEventListener("mousemove", (e) => {
+      //     const rect = card.getBoundingClientRect();
+      //     const x = e.clientX - rect.left - rect.width / 2;
+      //     const y = e.clientY - rect.top - rect.height / 2;
 
-          const rotateX = (y / rect.height) * -40;
-          const rotateY = (x / rect.width) * 40;
+      //     const rotateX = (y / rect.height) * -40;
+      //     const rotateY = (x / rect.width) * 40;
 
-          gsap.to(card, {
-            rotationX: rotateX,
-            rotationY: rotateY,
-            scale: 1.2,
-            duration: 0.25,
-            ease: "power2.out",
-          });
+      //     gsap.to(card, {
+      //       rotationX: rotateX,
+      //       rotationY: rotateY,
+      //       scale: 1.2,
+      //       duration: 0.25,
+      //       ease: "power2.out",
+      //     });
 
-          gsap.to(card.querySelector(".flex_item_img"), {
-            opacity: 0.9,
-            filter: "blur(3px)",
-            duration: 0.25,
-            ease: "power2.out",
-          });
-        });
+      //     gsap.to(card.querySelector(".flex_item_img"), {
+      //       opacity: 0.9,
+      //       filter: "blur(3px)",
+      //       duration: 0.25,
+      //       ease: "power2.out",
+      //     });
+      //   });
 
-        card.addEventListener("mouseleave", () => {
-          gsap.to(card, {
-            rotationX: 0,
-            rotationY: 0,
-            scale: 1,
-            duration: 0.4,
-            ease: "power2.out",
-          });
+      //   card.addEventListener("mouseleave", () => {
+      //     gsap.to(card, {
+      //       rotationX: 0,
+      //       rotationY: 0,
+      //       scale: 1,
+      //       duration: 0.4,
+      //       ease: "power2.out",
+      //     });
 
-          gsap.to(card.querySelector(".flex_item_img"), {
-            scale: 1,
-            opacity: 1,
-            filter: "grayscale(100%) blur(0px)",
-            duration: 0.4,
-            ease: "power2.out",
-          });
-        });
-      });
-      //gsap　画像アニメーション
-
-      // let mm = gsap.matchMedia();
-
-      // mm.add("(max-width: 1150px)", () => {
-      //   document.querySelectorAll(".card").forEach((card) => {
-      //     card.addEventListener("mousemove", (e) => {
-      //       const rect = card.getBoundingClientRect();
-      //       const x = e.clientX - rect.left - rect.width / 2;
-      //       const y = e.clientY - rect.top - rect.height / 2;
-
-      // ここでは scale と回転の角度だけ控えめに上書き
-      // const rotateX = (y / rect.height) * -15;
-      // const rotateY = (x / rect.width) * 15;
-
-      // gsap.to(card, {
-      //   rotationX: rotateX,
-      //   rotationY: rotateY,
-      //   scale: 1, // PCより控えめ
-      //       });
-
-      //       gsap.to(card.querySelector(""), {
-      //         scale: 1, // PCより控えめ
-      //       });
+      //     gsap.to(card.querySelector(".flex_item_img"), {
+      //       scale: 1,
+      //       opacity: 1,
+      //       filter: "grayscale(100%) blur(0px)",
+      //       duration: 0.4,
+      //       ease: "power2.out",
       //     });
       //   });
       // });
-      //ここまで
 
       //メールアイコンをふわっと表示させて一定の場所で非表示、上スクロールで再表示
       document.addEventListener("DOMContentLoaded", function () {
