--- a/works_all.html
+++ b/works_all.html
@@ -347,53 +347,97 @@
 
     <!-- 共通：jquery -->
     <script>
-      // まず画面幅をチェック
-      if (window.matchMedia("(min-width: 768px)").matches) {
-        // PC幅のときだけイベント登録
-        document.querySelectorAll(".card").forEach((card) => {
-          card.addEventListener("mousemove", (e) => {
-            const rect = card.getBoundingClientRect();
-            const x = e.clientX - rect.left - rect.width / 2;
-            const y = e.clientY - rect.top - rect.height / 2;
+      const cards = document.querySelectorAll(".card");
 
-            const rotateX = (y / rect.height) * -40;
-            const rotateY = (x / rect.width) * 40;
+      // イベントを登録する関数
+      function addEffects() {
+        cards.forEach((card) => {
+          card.addEventListener("mousemove", handleMouseMove);
+          card.addEventListener("mouseleave", handleMouseLeave);
+        });
+      }
 
-            gsap.to(card, {
-              rotationX: rotateX,
-              rotationY: rotateY,
-              scale: 1.2,
-              duration: 0.25,
-              ease: "power2.out",
-            });
+      // イベントを解除する関数
+      function removeEffects() {
+        cards.forEach((card) => {
+          card.removeEventListener("mousemove", handleMouseMove);
+          card.removeEventListener("mouseleave", handleMouseLeave);
 
-            gsap.to(card.querySelector(".flex_item_img"), {
-              opacity: 0.9,
-              filter: "blur(3px)",
-              duration: 0.25,
-              ease: "power2.out",
-            });
-          });
-
-          card.addEventListener("mouseleave", () => {
-            gsap.to(card, {
-              rotationX: 0,
-              rotationY: 0,
-              scale: 1,
-              duration: 0.4,
-              ease: "power2.out",
-            });
-
-            gsap.to(card.querySelector(".flex_item_img"), {
-              scale: 1,
-              opacity: 1,
-              filter: "grayscale(100%) blur(0px)",
-              duration: 0.4,
-              ease: "power2.out",
-            });
+          // 念のためリセットしておく
+          gsap.set(card, { rotationX: 0, rotationY: 0, scale: 1 });
+          gsap.set(card.querySelector(".flex_item_img"), {
+            scale: 1,
+            opacity: 1,
+            filter: "grayscale(100%) blur(0px)",
           });
         });
       }
+
+      // 実際の動き（分離しておくと add/remove が楽）
+      function handleMouseMove(e) {
+        const card = e.currentTarget;
+        const rect = card.getBoundingClientRect();
+        const x = e.clientX - rect.left - rect.width / 2;
+        const y = e.clientY - rect.top - rect.height / 2;
+
+        const rotateX = (y / rect.height) * -40;
+        const rotateY = (x / rect.width) * 40;
+
+        gsap.to(card, {
+          rotationX: rotateX,
+          rotationY: rotateY,
+          scale: 1.2,
+          duration: 0.25,
+          ease: "power2.out",
+        });
+
+        gsap.to(card.querySelector(".flex_item_img"), {
+          opacity: 0.9,
+          filter: "blur(3px)",
+          duration: 0.25,
+          ease: "power2.out",
+        });
+      }
+
+      function handleMouseLeave(e) {
+        const card = e.currentTarget;
+
+        gsap.to(card, {
+          rotationX: 0,
+          rotationY: 0,
+          scale: 1,
+          duration: 0.4,
+          ease: "power2.out",
+        });
+
+        gsap.to(card.querySelector(".flex_item_img"), {
+          scale: 1,
+          opacity: 1,
+          filter: "grayscale(100%) blur(0px)",
+          duration: 0.4,
+          ease: "power2.out",
+        });
+      }
+
+      // メディアクエリ監視
+      const mm = window.matchMedia("(min-width: 1151px)");
+
+      // 初期化
+      function checkWidth(e) {
+        if (e.matches) {
+          // PC幅以上 → エフェクト追加
+          addEffects();
+        } else {
+          // SP幅 → エフェクト解除
+          removeEffects();
+        }
+      }
+
+      // 初回チェック
+      checkWidth(mm);
+
+      // 画面幅が変わったときも監視
+      mm.addEventListener("change", checkWidth);
 
       //gsap　画像アニメーション　koko
       // document.querySelectorAll(".card").forEach((card) => {
