ポートフォリオ_iwasawa16

--- a/website_01.html
+++ b/website_01.html
@@ -281,6 +281,7 @@
           </g>
         </svg>
 
+        <a href="works_all.html">
         <div class="scroll_circle_wrapper">
           <!-- <img
           class="scrol_circle"
@@ -335,7 +336,7 @@
             </g>
           </g>
         </svg>
-      </div>
+      </div></a>
     </footer>
 
     <!-- 共通：jquery -->
@@ -527,6 +528,32 @@
           (e) => {
             if (atBottom && e.deltaY > 0) {
               overscroll = Math.min(maxExtra, overscroll + e.deltaY);
+            }
+          },
+          { passive: true }
+        );
+
+        // SP: タッチ操作
+        let touchStartY = 0;
+
+        window.addEventListener(
+          "touchstart",
+          (e) => {
+            // 指を置いたときのY座標を記録
+            touchStartY = e.touches[0].clientY;
+          },
+          { passive: true }
+        );
+
+        window.addEventListener(
+          "touchmove",
+          (e) => {
+            if (atBottom) {
+              const currentY = e.touches[0].clientY;
+              const deltaY = touchStartY - currentY; // 下方向にスワイプした量
+              if (deltaY > 0) {
+                overscroll = Math.min(maxExtra, overscroll + deltaY);
+              }
             }
           },
           { passive: true }
