--- a/index.html
+++ b/index.html
@@ -538,7 +538,8 @@
       //メールアイコンをふわっと表示させて一定の場所で非表示、上スクロールで再表示
       document.addEventListener("DOMContentLoaded", function () {
         const pageTop = document.querySelector("#mail");
-        const scrollThreshold = 100;
+        const form = document.querySelector("#c-form");
+        // const scrollThreshold = 100;
 
         function scrollTop() {
           window.scroll({
@@ -547,33 +548,48 @@
           });
         }
 
-        function scrollEvent() {
-          if (window.scrollY > scrollThreshold) {
-            pageTop.style.opacity = "1";
-          } else {
+        function handleScroll() {
+          const formTop = form.offsetTop;
+          const scrollPosition = window.scrollY + window.innerHeight;
+
+          // #c-formに到達したら非表示、それ以外は表示
+          if (scrollPosition >= formTop) {
             pageTop.style.opacity = "0";
-          }
-        }
-
-        function Position() {
-          const scrollHeight = document.documentElement.scrollHeight;
-          const scrollPosition = window.innerHeight + window.scrollY;
-          const footHeight = document.querySelector("#c-form").offsetHeight;
-          const footTop = document.querySelector("#c-form").offsetTop;
-
-          if (scrollPosition >= footTop) {
-            pageTop.style.position = "absolute";
-            pageTop.style.bottom = footHeight + "px";
           } else {
-            pageTop.style.position = "fixed";
-            pageTop.style.bottom = "0";
+            pageTop.style.opacity = "1";
           }
         }
 
-        // pageTop.addEventListener("click", scrollTop);
-        window.addEventListener("scroll", scrollEvent);
-        window.addEventListener("scroll", Position);
+        pageTop.addEventListener("click", scrollTop);
+        window.addEventListener("scroll", handleScroll);
       });
+
+      // function scrollEvent() {
+      //   if (window.scrollY > scrollThreshold) {
+      //     pageTop.style.opacity = "1";
+      //   } //else {
+      //pageTop.style.opacity = "0";
+      //}
+      // }
+
+      // function Position() {
+      //   const scrollHeight = document.documentElement.scrollHeight;
+      //   const scrollPosition = window.innerHeight + window.scrollY;
+      //   const footHeight = document.querySelector("#c-form").offsetHeight;
+      //   const footTop = document.querySelector("#c-form").offsetTop;
+
+      //   if (scrollPosition >= footTop) {
+      //     pageTop.style.position = "absolute";
+      //     pageTop.style.bottom = footHeight + "px";
+      //   } else {
+      //     pageTop.style.position = "fixed";
+      //     pageTop.style.bottom = "0";
+      //   }
+      // }
+
+      // pageTop.addEventListener("click", scrollTop);
+      // window.addEventListener("scroll", scrollEvent);
+      // window.addEventListener("scroll", Position);
 
       //ローディング
       document.addEventListener("DOMContentLoaded", function () {
